--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NEXT_DISABLE_TURBOPACK=1 next dev",
-    "build": "next build",
+    "build": "node scripts/setup-oracle.js && next build",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "patch-package && npx prisma generate"
