--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "lucide": "^0.515.0",
     "lucide-react": "^0.515.0",
     "next": "15.3.3",
+    "next-themes": "^0.4.6",
     "oracledb": "^6.8.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "xlsx": "^0.18.5",
     "zod": "^3.25.64"
@@ -53,6 +55,7 @@
     "postinstall-postinstall": "^2.1.0",
     "prisma": "^6.12.0",
     "tailwindcss": "^4",
+    "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   }
