--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NEXT_DISABLE_TURBOPACK=1 next dev",
-    "build": "node scripts/setup-oracle.js && next build",
+  "dev": "cross-env NEXT_DISABLE_TURBOPACK=1 next dev",
+  "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "patch-package && npx prisma generate"
+  "postinstall": "npx prisma generate"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
@@ -30,7 +30,7 @@
     "lucide-react": "^0.515.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
-    "oracledb": "^6.8.0",
+    
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
@@ -45,14 +45,13 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
-    "@types/oracledb": "^6.6.1",
+    
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "cross-env": "^7.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "patch-package": "^8.0.0",
-    "postinstall-postinstall": "^2.1.0",
+    
     "prisma": "^6.12.0",
     "tailwindcss": "^4",
     "tailwindcss-animate": "^1.0.7",
