--- a/vercel.json
+++ b/vercel.json
@@ -5,9 +5,7 @@
   "installCommand": "npm install",
   "framework": "nextjs",
   "env": {
-    "NODE_ENV": "production",
-    "LD_LIBRARY_PATH": "/tmp/instantclient:/usr/lib:/lib",
-    "ORACLE_HOME": "/tmp/instantclient"
+  "NODE_ENV": "production"
   },
   "functions": {
     "src/app/api/**/*.ts": {
