--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,10 @@
     "src/app/api/**/*.ts": {
       "maxDuration": 30,
       "memory": 512
+    },
+    "src/app/api/proxy/**/*.ts": {
+      "maxDuration": 25,
+      "memory": 1024
     }
   },
   "regions": ["cle1"]
